; ModuleID = '/home/carl/AnghaBench/linux/drivers/gpu/drm/radeon/extr_kv_dpm.c_kv_init_powergate_state.c'
source_filename = "/home/carl/AnghaBench/linux/drivers/gpu/drm/radeon/extr_kv_dpm.c_kv_init_powergate_state.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.radeon_device = type { i32 }
%struct.kv_power_info = type { i32, i32, i32, i32 }

@llvm.used = appending global [1 x i8*] [i8* bitcast (void (%struct.radeon_device*)* @kv_init_powergate_state to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @kv_init_powergate_state(%struct.radeon_device* %0) #0 {
  %2 = alloca %struct.radeon_device*, align 8
  %3 = alloca %struct.kv_power_info*, align 8
  store %struct.radeon_device* %0, %struct.radeon_device** %2, align 8
  %4 = load %struct.radeon_device*, %struct.radeon_device** %2, align 8
  %5 = call %struct.kv_power_info* @kv_get_pi(%struct.radeon_device* %4)
  store %struct.kv_power_info* %5, %struct.kv_power_info** %3, align 8
  %6 = load %struct.kv_power_info*, %struct.kv_power_info** %3, align 8
  %7 = getelementptr inbounds %struct.kv_power_info, %struct.kv_power_info* %6, i32 0, i32 0
  store i32 0, i32* %7, align 4
  %8 = load %struct.kv_power_info*, %struct.kv_power_info** %3, align 8
  %9 = getelementptr inbounds %struct.kv_power_info, %struct.kv_power_info* %8, i32 0, i32 1
  store i32 0, i32* %9, align 4
  %10 = load %struct.kv_power_info*, %struct.kv_power_info** %3, align 8
  %11 = getelementptr inbounds %struct.kv_power_info, %struct.kv_power_info* %10, i32 0, i32 2
  store i32 0, i32* %11, align 4
  %12 = load %struct.kv_power_info*, %struct.kv_power_info** %3, align 8
  %13 = getelementptr inbounds %struct.kv_power_info, %struct.kv_power_info* %12, i32 0, i32 3
  store i32 0, i32* %13, align 4
  ret void
}

declare dso_local %struct.kv_power_info* @kv_get_pi(%struct.radeon_device*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
